Make definition match declaration for AppendUCS4ToUTF16.  Bug 316859, patch by Greg Onufer <gonufer@yahoo.com>, r+sr=bzbarsky